<resources>
    <!-- Global -->
    <string name="locale">en_GB</string>
    <string name="app_name">Hunting and Fishing Grounds</string>

    <!-- Menu -->
    <string name="map">Map</string>
    <string name="catalog">Catalog</string>
    <string name="favorites">Favorites</string>
    <string name="preferences">Preferences</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_oblast">Sort by oblast</string>
    <string name="sort_by_area">Sort by area</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="delete_from_favorites">Delete from favorites</string>
    <string name="map_type">Map type</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_terrain">Terrain</string>

    <!-- Other -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_category">Select category</string>
    <string name="hunting_grounds">Hunting Grounds</string>
    <string name="fishing_grounds">Fishing Grounds</string>
    <string name="auhfg">Association of users of hunting and fishing grounds</string>

    <!-- Company -->
    <string name="memberOfAssociation">Member of Association</string>
    <string name="area">Area:</string>
    <string name="kilo_ha">kilo ha.</string>
    <string name="website">Website:</string>
    <string name="email">E-mail:</string>
    <string name="juridical_address">Juridical address:</string>
    <string name="actual_address">Actual address:</string>
    <string name="director">Director:</string>
    <string name="contacts">Contacts</string>
    <string name="location">Location</string>

    <!-- Oblast -->
    <string name="vinnytsia_oblast">Vinnytsia oblast</string>
    <string name="volyn_oblast">Volyn oblast</string>
    <string name="dnipropetrovsk_oblast">Dnipropetrovsk oblast</string>
    <string name="donetsk_oblast">Donetsk oblast</string>
    <string name="zhitomyr_oblast">Zhitomyr oblast</string>
    <string name="zakarpattia_oblast">Zakarpattia oblast</string>
    <string name="zaporizhia_oblast">Zaporizhia oblast</string>
    <string name="ivano_frankivsk_oblast">Ivano-Frankivsk oblast</string>
    <string name="kyiv_oblast">Kyiv oblast</string>
    <string name="kirovohrad_oblast">Kirovohrad oblast</string>
    <string name="luhansk_oblast">Luhansk oblast</string>
    <string name="lviv_oblast">Lviv oblast</string>
    <string name="mykolaiv_oblast">Mykolaiv oblast</string>
    <string name="odessa_oblast">Odessa oblast</string>
    <string name="poltava_oblast">Poltava oblast</string>
    <string name="rivne_oblast">Rivne oblast</string>
    <string name="sumy_oblast">Sumy oblast</string>
    <string name="ternopil_oblast">Ternopil oblast</string>
    <string name="kharkiv_oblast">Kharkiv oblast</string>
    <string name="kherson_oblast">Kherson oblast</string>
    <string name="khmelnytskyi_oblast">Khmelnytskyi oblast</string>
    <string name="cherkasy_oblast">Cherkasy oblast</string>
    <string name="chernivtsi_oblast">Chernivtsi oblast</string>
    <string name="chernygiv_oblast">Chernygiv oblast</string>
    <string name="krim">Krim</string>

    <!-- Preferences -->
    <string name="other">Other</string>
    <string name="home_screen_title">Home Screen</string>
    <string-array name="home_screen_entries">
        <item>Map</item>
        <item>Catalog</item>
        <item>Favorites</item>
    </string-array>
    <string-array name="home_screen_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="update">Update</string>
    <string name="update_database">Update Database</string>
    <string name="last_update">Last update: </string>
    <string name="update_success">Update success!</string>
    <string name="update_failed">Update failed!</string>

    <!-- Preferences keys -->
    <string name="key_home_screen">home_screen</string>
    <string name="key_update_database">update_database</string>
    <string name="key_first_run">first_run</string>
    <string name="key_map_type">map_type</string>

    <!-- First run -->
    <string name="downloading">Downloading database</string>
    <string name="download_error">Download error. Please, check connection and try again.</string>
    <string name="retry">Retry</string>
</resources>
