<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/map_type"
        android:icon="@drawable/ic_menu_map_white_24dp"
        android:orderInCategory="101"
        android:title="@string/map_type"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/map_type_normal"
                    android:orderInCategory="1"
                    app:showAsAction="never"
                    android:title="@string/map_type_normal"/>
                <item
                    android:id="@+id/map_type_hybrid"
                    android:orderInCategory="2"
                    app:showAsAction="never"
                    android:title="@string/map_type_hybrid"/>
                <item
                    android:id="@+id/map_type_terrain"
                    android:orderInCategory="3"
                    app:showAsAction="never"
                    android:title="@string/map_type_terrain"/>
            </group>
        </menu>
    </item>

</menu>
