<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/ic_menu_catalog"
            android:title="@string/catalog" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_menu_update"
            android:title="@string/update" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/preferences" />
    </group>

    <item
        android:title="Communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
